# travelling-salesman

./: .gitignore  CMakeLists.txt  README.md  exact_tour_weights  main.cpp  research.ipynb
algo/: BranchAndBound.cpp  BranchAndBound.h  CMakeLists.txt  Distance.cpp  Distance.h  GeneticAlgorithm.cpp  GeneticAlgorithm.h  IOptimizer.cpp  IOptimizer.h  ISolution.cpp  ISolution.h  LocalSearch.cpp  LocalSearch.h  MinimumSpanningTree.cpp  MinimumSpanningTree.h  NaiveSolution.cpp  NaiveSolution.h  NearestNeighbour.cpp  NearestNeighbour.h  SimulatedAnnealing.h  SolutionMaker.h  Test.cpp  Test.h  Tour.cpp  Tour.h
config/: CMakeLists.txt  CacheConfig.cpp  CacheConfig.h  DatasetConfig.cpp  DatasetConfig.h
datasets/: gr24.opt.tour  gr48.opt.tour  gr96.opt.tour  linhp318.tsp  rd100.opt.tour  si535.tsp  ulysses16.opt.tour
lib/: CMakeLists.txt  ThreadPool.h  Timer.h
runner/: CMakeLists.txt  SolutionsRunner.cpp  SolutionsRunner.h
util/: CMakeLists.txt  Ensure.cpp  Ensure.h  String.cpp  String.h
